@@ -568,7 +568,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=管理ツール</td>
+	<td>link=サブプロジェクトの管理</td>
 	<td></td>
 </tr>
 <tr>
@@ -578,7 +578,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=プロジェクト設定</td>
+	<td>link=サブプロジェクト設定</td>
 	<td></td>
 </tr>
 <tr>
@@ -823,7 +823,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=テストサンプル プロジェクトトップへ</td>
+	<td>link=テストサンプル プロジェクトへ</td>
 	<td></td>
 </tr>
 <tr>
@@ -923,7 +923,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=管理ツール</td>
+	<td>link=サブプロジェクトの管理</td>
 	<td></td>
 </tr>
 <tr>
@@ -998,7 +998,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=テストサンプル プロジェクトトップへ</td>
+	<td>link=テストサンプル プロジェクトへ</td>
 	<td></td>
 </tr>
 <tr>
@@ -1238,7 +1238,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=管理ツール</td>
+	<td>link=サブプロジェクトの管理</td>
 	<td></td>
 </tr>
 <tr>
@@ -1368,7 +1368,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=テストサンプル プロジェクトトップへ</td>
+	<td>link=テストサンプル プロジェクトへ</td>
 	<td></td>
 </tr>
 <tr>
@@ -1733,7 +1733,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=管理ツール</td>
+	<td>link=サブプロジェクトの管理</td>
 	<td></td>
 </tr>
 <tr>
@@ -1768,7 +1768,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=テストサンプル プロジェクトトップへ</td>
+	<td>link=テストサンプル プロジェクトへ</td>
 	<td></td>
 </tr>
 <tr>
